# fdb

./: .gitignore  .readthedocs.yml  LICENSE  LICENSE.TXT  MANIFEST.in  PKG-INFO  README  README.md  README.rst  ReleaseNotes.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: changelog.html  concurrency.html  differecnes-from-kdb.html  differences-from-kdb.html  genindex.html  getting-started.html  index.html  license.html  links.html  objects.inv  py-modindex.html  python-db-api-compliance.html  reference.html  search.html  searchindex.js  thread-safety-overview.html  usage-guide.html
docs/_sources/: changelog.txt  concurrency.txt  differences-from-kdb.txt  getting-started.txt  index.txt  reference.txt  thread-safety-overview.txt  usage-guide.txt
docs/_static/: fdbtheme.css
fdb/: __init__.py  blr.py  fbcore.py  gstat.py  ibase.py  log.py  monitor.py  schema.py  services.py  trace.py  utils.py
fdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sphinx/: Python-DB-API-2.0.txt  beyond-python-db-api.txt  changelog.txt  concurrency.txt  conf.py  differences-from-kdb.txt  getting-started.txt  index.txt  installation.txt  license.txt  links.txt  python-db-api-compliance.txt  reference.txt  requirements.txt  thread-safety-overview.txt  tutorial.txt  usage-guide.txt
sphinx/.static/: basic.css  default.css  fdbtheme.css
sphinx/fdbtheme/: theme.conf
test/: fbtest.fdb  fbtest20.fdb  fbtest25.fdb  fbtest30.fdb  gstat25-d.out  gstat25-f.out  gstat25-i.out  gstat25-r.out  gstat25-s.out  gstat30-d.out  gstat30-e.out  gstat30-f.out  testfdb.py
tests/: fbtest.fdb  fbtest21.fdb  fbtest25.fdb  fbtest30.fdb  gstat25-a.out  gstat25-h.out  gstat30-a.out  gstat30-h.out  gstat30-i.out  gstat30-r.out  gstat30-s.out  test_fdb.py
