[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fdb"
description = "Legacy Python driver for Firebird 2.5"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4"
license = { file = "LICENSE" }
authors = [
  { name = "Pavel Cisar", email = "pcisar@users.sourceforge.net"},
]
keywords = ["Firebird", "RDBMS", "driver"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Topic :: Software Development",
  "Topic :: Database",
]
dependencies = [
  "firebird-base~=2.0",
  "python-dateutil~=2.8",
]

[project.urls]
Home = "https://github.com/FirebirdSQL/fdb"
Documentation = "https://fdb.rtfd.io"
Issues = "https://github.com/FirebirdSQL/fdb/issues"
Source = "https://github.com/FirebirdSQL/fdb"

[tool.hatch.version]
path = "fdb/fbcore.py"

[tool.hatch.build.targets.sdist]
include = ["fdb"]

[tool.hatch.build.targets.wheel]
packages = ["fdb"]

[tool.hatch.envs.default]
dependencies = [
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["2.7", "3.11"]
