[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir=sphinx
all-files=True


[metadata]
# This includes the license file in the wheel.
license_file = LICENSE.TXT

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1
